# crypto-swings

./: .gitignore  README.md  notify_telegram.py  publish_notion.py  pyproject.toml
.claude/agents/: crypto-swings-analyst.md
.claude/skills/crypto-swings/: SKILL.md
config/: btc.json  eth.json
scripts/: emit_payload.py
src/: config.py  derivatives.py  fetch.py  fvg.py  levels.py  main.py  market_structure.py  notion_writer.py  order_blocks.py  telegram_notify.py  types.py  venue_aggregator.py  volume_profile.py
tests/: test_config.py  test_confluence.py  test_derivatives.py  test_end_to_end.py  test_fetch.py  test_fvg.py  test_levels.py  test_market_structure.py  test_notion_writer.py  test_telegram_notify.py  test_venue_aggregator.py  test_volume_profile.py
tests/fixtures/: binance_1d_sample.json  ohlc_all_tfs.py
tests/fixtures/coinalyze/: funding_rate.json  liquidation_history.json  open_interest.json  open_interest_history.json  predicted_funding_rate.json
